--- a/style/loading.css
+++ b/style/loading.css
@@ -13,17 +13,15 @@ body {
 .loading-text {
     font-size: 50px;
     opacity: 1;
-
 }
 
 .bg {
-    width: 100 vw;
+    width: 100vw;
     height: 100vh;
-    background-image: url('../images/bu.avif');
+    background-image: url('bu.avif');
     position: absolute;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
     z-index: -1;
     filter: blur(50px)
 }
