--- a/style/loading.css
+++ b/style/loading.css
@@ -22,6 +22,7 @@ body {
     position: absolute;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     z-index: -1;
     filter: blur(50px)
 }
