--- a/style/red.css
+++ b/style/red.css
@@ -1,3 +1,15 @@
-.bg{
-    background: red;
+
+body {
+    height:100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    background red;
+}
+
+.box {
+    height: 50px;
+    width: 50px;
+    background: pink;
 }
