--- a/style/red.css
+++ b/style/red.css
@@ -5,7 +5,7 @@ body {
     align-items: center;
     justify-content: center;
     margin: 0;
-    background red;
+    background: rgb(176,72,96);
 }
 
 .box {
